--- a/BanVeDiTourDuLich/Web.config
+++ b/BanVeDiTourDuLich/Web.config
@@ -19,6 +19,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <customErrors mode="Off"/>
+    <!--<compilation debug="true"/>-->
+    <authentication mode="None"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
