--- a/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
+++ b/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
@@ -2637,6 +2637,7 @@
     <Content Include="Views\Admin\ThemMoiDiaDiem.cshtml" />
     <Content Include="Views\User\InforUser.cshtml" />
     <Content Include="Views\Admin\QuanLyNhanVien.cshtml" />
+    <Content Include="Views\Admin\ThemNhanVien.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
